--- a/DrawOpenLGLinImGuiWindow.vcxproj.filters
+++ b/DrawOpenLGLinImGuiWindow.vcxproj.filters
@@ -56,6 +56,9 @@
     <ClInclude Include="include\imgui.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="simple.frag">
@@ -64,5 +67,15 @@
     <None Include="simple.vert">
       <Filter>シェーダ― ファイル</Filter>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="DrawOpenLGLinImGuiWindow.rc">
+      <Filter>リソース ファイル</Filter>
+    </ResourceCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="gg.ico">
+      <Filter>リソース ファイル</Filter>
+    </Image>
   </ItemGroup>
 </Project>
