--- a/DrawOpenGLinImGuiWindow.vcxproj
+++ b/DrawOpenGLinImGuiWindow.vcxproj
@@ -21,7 +21,7 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <ProjectGuid>{937AF3B4-8E3C-426D-B622-61B9B050FF04}</ProjectGuid>
-    <RootNamespace>DrawOpenLGLinImGuiWindow</RootNamespace>
+    <RootNamespace>DrawOpenGLinImGuiWindow</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -163,7 +163,7 @@
     <None Include="simple.vert" />
   </ItemGroup>
   <ItemGroup>
-    <ResourceCompile Include="DrawOpenLGLinImGuiWindow.rc" />
+    <ResourceCompile Include="DrawOpenGLinImGuiWindow.rc" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="gg.ico" />
